cbits/skia_capi/sk_types.h

typedef enum {
    NONE_SK_SURFACE_PROPS_FLAGS = 0,
    USE_DEVICE_INDEPENDENT_FONTS_SK_SURFACE_PROPS_FLAGS = 1 << 0,
    DYNAMIC_MSAA_SK_SURFACE_PROPS_FLAGS = 1 << 1,
    ALWAYS_DITHER_SK_SURFACE_PROPS_FLAGS = 1 << 2,
} sk_surfaceprops_flags_t;
typedef struct sk_surfaceprops_t sk_surfaceprops_t;
typedef struct {
    float x;
    float y;
} sk_point_t;
typedef sk_point_t sk_vector_t;
typedef struct {
    int32_t left;
    int32_t top;
    int32_t right;
    int32_t bottom;
} sk_irect_t;
typedef struct {
    float left;
    float top;
    float right;
    float bottom;
} sk_rect_t;
typedef struct {
    float scaleX, skewX, transX;
    float skewY, scaleY, transY;
    float persp0, persp1, persp2;
} sk_matrix_t;
// row major
typedef struct {
    // name: m<row><col>
    float m00, m01, m02, m03;  // row 0
    float m10, m11, m12, m13;  // row 1
    float m20, m21, m22, m23;  // row 2
    float m30, m31, m32, m33;  // row 3
} sk_matrix44_t;
/**
    A sk_canvas_t encapsulates all of the state about drawing into a
    destination This includes a reference to the destination itself,
    and a stack of matrix/clip values.
*/
typedef struct sk_canvas_t sk_canvas_t;
typedef struct sk_nodraw_canvas_t sk_nodraw_canvas_t;
typedef struct sk_nway_canvas_t sk_nway_canvas_t;
typedef struct sk_overdraw_canvas_t sk_overdraw_canvas_t;
/**
    A sk_data_ holds an immutable data buffer.
*/
typedef struct sk_data_t sk_data_t;
/**
    A sk_drawable_t is a abstraction for drawings that changed while
    drawing.
*/
typedef struct sk_drawable_t sk_drawable_t;
/**
    A sk_image_t is an abstraction for drawing a rectagle of pixels.
    The content of the image is always immutable, though the actual
    storage may change, if for example that image can be re-created via
    encoded data or other means.
*/
typedef struct sk_image_t sk_image_t;
/**
    A sk_maskfilter_t is an object that perform transformations on an
    alpha-channel mask before drawing it; it may be installed into a
    sk_paint_t.  Each time a primitive is drawn, it is first
    scan-converted into a alpha mask, which os handed to the
    maskfilter, which may create a new mask is to render into the
    destination.
 */
typedef struct sk_maskfilter_t sk_maskfilter_t;
/**
    A sk_paint_t holds the style and color information about how to
    draw geometries, text and bitmaps.
*/
typedef struct sk_paint_t sk_paint_t;
typedef struct sk_font_t sk_font_t;
/**
    A sk_path_t encapsulates compound (multiple contour) geometric
    paths consisting of straight line segments, quadratic curves, and
    cubic curves.
*/
typedef struct sk_path_t sk_path_t;
/**
    A sk_picture_t holds recorded canvas drawing commands to be played
    back at a later time.
*/
typedef struct sk_picture_t sk_picture_t;
/**
    A sk_picture_recorder_t holds a sk_canvas_t that records commands
    to create a sk_picture_t.
*/
typedef struct sk_picture_recorder_t sk_picture_recorder_t;
/**
    A sk_bbh_factory_t generates an sk_bbox_hierarchy as a display optimization
    for culling invisible calls recorded by a sk_picture_recorder. It may
    be passed in to sk_picture_recorder_begin_recording_with_bbh_factory,
    typically as an instance of the subclass sk_rtree_factory_t.
*/
typedef struct sk_bbh_factory_t sk_bbh_factory_t;
/**
    A sk_rtree_factory_t generates a sk_rtree as a display optimization
    for culling invisible calls recorded by a sk_picture_recorder_t. Inherits
    from sk_bbh_factory_t.
*/
typedef struct sk_rtree_factory_t sk_rtree_factory_t;