src/Skia/Bindings/Types.hsc


-- | C enum @"sk_surfaceprops_flags_t"@ value (3/4): @"DYNAMIC_MSAA_SK_SURFACE_PROPS_FLAGS"@
pattern DYNAMIC_MSAA_SK_SURFACE_PROPS_FLAGS :: Sk_surfaceprops_flags
pattern DYNAMIC_MSAA_SK_SURFACE_PROPS_FLAGS = (#const DYNAMIC_MSAA_SK_SURFACE_PROPS_FLAGS)

-- | C enum @"sk_surfaceprops_flags_t"@ value (4/4): @"ALWAYS_DITHER_SK_SURFACE_PROPS_FLAGS"@
pattern ALWAYS_DITHER_SK_SURFACE_PROPS_FLAGS :: Sk_surfaceprops_flags
pattern ALWAYS_DITHER_SK_SURFACE_PROPS_FLAGS = (#const ALWAYS_DITHER_SK_SURFACE_PROPS_FLAGS)

{- | Opaque C struct: @"sk_surfaceprops_t"@
-}
data Sk_surfaceprops = Sk_surfaceprops

{- | C struct: @"sk_point_t"@

@
typedef struct 
{
  float x;
  float y;
} sk_point_t
@
-}
data Sk_point = Sk_point
  { x :: CFloat -- ^ C field: @"float x"@
  , y :: CFloat -- ^ C field: @"float y"@
  }
instance Foreign.Storable.Offset.Offset "x" Sk_point where
  rawOffset = (#offset sk_point_t, x)
instance Foreign.Storable.Offset.Offset "y" Sk_point where
  rawOffset = (#offset sk_point_t, y)
instance Foreign.Storable.Storable Sk_point where
  sizeOf _ = (#size sk_point_t)
  alignment _ = (#alignment sk_point_t)
  peek p' = do
    x <- (#peek sk_point_t, x) p'
    y <- (#peek sk_point_t, y) p'
    pure Sk_point{..}
  poke p' Sk_point{..} = do
    (#poke sk_point_t, x) p' x
    (#poke sk_point_t, y) p' y

{- | C type alias: @sk_vector_t@

@
typedef sk_point_t sk_vector_t
@
-}
type Sk_vector = Sk_point

{- | C struct: @"sk_irect_t"@

@
typedef struct 
{
  int32_t left;
  int32_t top;
  int32_t right;
  int32_t bottom;
} sk_irect_t
@
-}
data Sk_irect = Sk_irect
  { left :: Int32 -- ^ C field: @"int32_t left"@
  , top :: Int32 -- ^ C field: @"int32_t top"@
  , right :: Int32 -- ^ C field: @"int32_t right"@
  , bottom :: Int32 -- ^ C field: @"int32_t bottom"@
  }
instance Foreign.Storable.Offset.Offset "left" Sk_irect where
  rawOffset = (#offset sk_irect_t, left)
instance Foreign.Storable.Offset.Offset "top" Sk_irect where
  rawOffset = (#offset sk_irect_t, top)
instance Foreign.Storable.Offset.Offset "right" Sk_irect where
  rawOffset = (#offset sk_irect_t, right)
instance Foreign.Storable.Offset.Offset "bottom" Sk_irect where
  rawOffset = (#offset sk_irect_t, bottom)
instance Foreign.Storable.Storable Sk_irect where
  sizeOf _ = (#size sk_irect_t)
  alignment _ = (#alignment sk_irect_t)
  peek p' = do
    left <- (#peek sk_irect_t, left) p'
    top <- (#peek sk_irect_t, top) p'
    right <- (#peek sk_irect_t, right) p'
    bottom <- (#peek sk_irect_t, bottom) p'
    pure Sk_irect{..}
  poke p' Sk_irect{..} = do
    (#poke sk_irect_t, left) p' left
    (#poke sk_irect_t, top) p' top
    (#poke sk_irect_t, right) p' right
    (#poke sk_irect_t, bottom) p' bottom

{- | C struct: @"sk_rect_t"@

@
typedef struct 
{
  float left;
  float top;
  float right;
  float bottom;
} sk_rect_t
@
-}
data Sk_rect = Sk_rect
  { left :: CFloat -- ^ C field: @"float left"@
  , top :: CFloat -- ^ C field: @"float top"@
  , right :: CFloat -- ^ C field: @"float right"@
  , bottom :: CFloat -- ^ C field: @"float bottom"@
  }
instance Foreign.Storable.Offset.Offset "left" Sk_rect where
  rawOffset = (#offset sk_rect_t, left)
instance Foreign.Storable.Offset.Offset "top" Sk_rect where
  rawOffset = (#offset sk_rect_t, top)
instance Foreign.Storable.Offset.Offset "right" Sk_rect where
  rawOffset = (#offset sk_rect_t, right)
instance Foreign.Storable.Offset.Offset "bottom" Sk_rect where
  rawOffset = (#offset sk_rect_t, bottom)
instance Foreign.Storable.Storable Sk_rect where
  sizeOf _ = (#size sk_rect_t)
  alignment _ = (#alignment sk_rect_t)
  peek p' = do
    left <- (#peek sk_rect_t, left) p'
    top <- (#peek sk_rect_t, top) p'
    right <- (#peek sk_rect_t, right) p'
    bottom <- (#peek sk_rect_t, bottom) p'
    pure Sk_rect{..}
  poke p' Sk_rect{..} = do
    (#poke sk_rect_t, left) p' left
    (#poke sk_rect_t, top) p' top
    (#poke sk_rect_t, right) p' right
    (#poke sk_rect_t, bottom) p' bottom

{- | C struct: @"sk_matrix_t"@

@
typedef struct 
{
  float scaleX;
  float skewX;
  float transX;
  float skewY;
  float scaleY;
  float transY;
  float persp0;
  float persp1;
  float persp2;
} sk_matrix_t
@
-}
data Sk_matrix = Sk_matrix
  { scaleX :: CFloat -- ^ C field: @"float scaleX"@
  , skewX :: CFloat -- ^ C field: @"float skewX"@
  , transX :: CFloat -- ^ C field: @"float transX"@
  , skewY :: CFloat -- ^ C field: @"float skewY"@
  , scaleY :: CFloat -- ^ C field: @"float scaleY"@
  , transY :: CFloat -- ^ C field: @"float transY"@
  , persp0 :: CFloat -- ^ C field: @"float persp0"@
  , persp1 :: CFloat -- ^ C field: @"float persp1"@
  , persp2 :: CFloat -- ^ C field: @"float persp2"@
  }
instance Foreign.Storable.Offset.Offset "scaleX" Sk_matrix where
  rawOffset = (#offset sk_matrix_t, scaleX)
instance Foreign.Storable.Offset.Offset "skewX" Sk_matrix where
  rawOffset = (#offset sk_matrix_t, skewX)
instance Foreign.Storable.Offset.Offset "transX" Sk_matrix where
  rawOffset = (#offset sk_matrix_t, transX)
instance Foreign.Storable.Offset.Offset "skewY" Sk_matrix where
  rawOffset = (#offset sk_matrix_t, skewY)
instance Foreign.Storable.Offset.Offset "scaleY" Sk_matrix where
  rawOffset = (#offset sk_matrix_t, scaleY)
instance Foreign.Storable.Offset.Offset "transY" Sk_matrix where
  rawOffset = (#offset sk_matrix_t, transY)
instance Foreign.Storable.Offset.Offset "persp0" Sk_matrix where
  rawOffset = (#offset sk_matrix_t, persp0)
instance Foreign.Storable.Offset.Offset "persp1" Sk_matrix where
  rawOffset = (#offset sk_matrix_t, persp1)
instance Foreign.Storable.Offset.Offset "persp2" Sk_matrix where
  rawOffset = (#offset sk_matrix_t, persp2)
instance Foreign.Storable.Storable Sk_matrix where
  sizeOf _ = (#size sk_matrix_t)
  alignment _ = (#alignment sk_matrix_t)
  peek p' = do
    scaleX <- (#peek sk_matrix_t, scaleX) p'
    skewX <- (#peek sk_matrix_t, skewX) p'
    transX <- (#peek sk_matrix_t, transX) p'
    skewY <- (#peek sk_matrix_t, skewY) p'
    scaleY <- (#peek sk_matrix_t, scaleY) p'
    transY <- (#peek sk_matrix_t, transY) p'
    persp0 <- (#peek sk_matrix_t, persp0) p'
    persp1 <- (#peek sk_matrix_t, persp1) p'
    persp2 <- (#peek sk_matrix_t, persp2) p'
    pure Sk_matrix{..}
  poke p' Sk_matrix{..} = do
    (#poke sk_matrix_t, scaleX) p' scaleX
    (#poke sk_matrix_t, skewX) p' skewX
    (#poke sk_matrix_t, transX) p' transX
    (#poke sk_matrix_t, skewY) p' skewY
    (#poke sk_matrix_t, scaleY) p' scaleY
    (#poke sk_matrix_t, transY) p' transY
    (#poke sk_matrix_t, persp0) p' persp0
    (#poke sk_matrix_t, persp1) p' persp1
    (#poke sk_matrix_t, persp2) p' persp2

{- | C struct: @"sk_matrix44_t"@

@
typedef struct 
{
  float m00;
  float m01;
  float m02;
  float m03;
  float m10;
  float m11;
  float m12;
  float m13;
  float m20;
  float m21;
  float m22;
  float m23;
  float m30;
  float m31;
  float m32;
  float m33;
} sk_matrix44_t
@
-}
data Sk_matrix44 = Sk_matrix44
  { m00 :: CFloat -- ^ C field: @"float m00"@
  , m01 :: CFloat -- ^ C field: @"float m01"@
  , m02 :: CFloat -- ^ C field: @"float m02"@
  , m03 :: CFloat -- ^ C field: @"float m03"@
  , m10 :: CFloat -- ^ C field: @"float m10"@
  , m11 :: CFloat -- ^ C field: @"float m11"@
  , m12 :: CFloat -- ^ C field: @"float m12"@
  , m13 :: CFloat -- ^ C field: @"float m13"@
  , m20 :: CFloat -- ^ C field: @"float m20"@
  , m21 :: CFloat -- ^ C field: @"float m21"@
  , m22 :: CFloat -- ^ C field: @"float m22"@
  , m23 :: CFloat -- ^ C field: @"float m23"@
  , m30 :: CFloat -- ^ C field: @"float m30"@
  , m31 :: CFloat -- ^ C field: @"float m31"@
  , m32 :: CFloat -- ^ C field: @"float m32"@
  , m33 :: CFloat -- ^ C field: @"float m33"@
  }
instance Foreign.Storable.Offset.Offset "m00" Sk_matrix44 where
  rawOffset = (#offset sk_matrix44_t, m00)
instance Foreign.Storable.Offset.Offset "m01" Sk_matrix44 where
  rawOffset = (#offset sk_matrix44_t, m01)
instance Foreign.Storable.Offset.Offset "m02" Sk_matrix44 where
  rawOffset = (#offset sk_matrix44_t, m02)
instance Foreign.Storable.Offset.Offset "m03" Sk_matrix44 where
  rawOffset = (#offset sk_matrix44_t, m03)
instance Foreign.Storable.Offset.Offset "m10" Sk_matrix44 where
  rawOffset = (#offset sk_matrix44_t, m10)
instance Foreign.Storable.Offset.Offset "m11" Sk_matrix44 where
  rawOffset = (#offset sk_matrix44_t, m11)
instance Foreign.Storable.Offset.Offset "m12" Sk_matrix44 where
  rawOffset = (#offset sk_matrix44_t, m12)
instance Foreign.Storable.Offset.Offset "m13" Sk_matrix44 where
  rawOffset = (#offset sk_matrix44_t, m13)
instance Foreign.Storable.Offset.Offset "m20" Sk_matrix44 where
  rawOffset = (#offset sk_matrix44_t, m20)
instance Foreign.Storable.Offset.Offset "m21" Sk_matrix44 where
  rawOffset = (#offset sk_matrix44_t, m21)
instance Foreign.Storable.Offset.Offset "m22" Sk_matrix44 where
  rawOffset = (#offset sk_matrix44_t, m22)
instance Foreign.Storable.Offset.Offset "m23" Sk_matrix44 where
  rawOffset = (#offset sk_matrix44_t, m23)
instance Foreign.Storable.Offset.Offset "m30" Sk_matrix44 where
  rawOffset = (#offset sk_matrix44_t, m30)
instance Foreign.Storable.Offset.Offset "m31" Sk_matrix44 where
  rawOffset = (#offset sk_matrix44_t, m31)
instance Foreign.Storable.Offset.Offset "m32" Sk_matrix44 where
  rawOffset = (#offset sk_matrix44_t, m32)
instance Foreign.Storable.Offset.Offset "m33" Sk_matrix44 where
  rawOffset = (#offset sk_matrix44_t, m33)
instance Foreign.Storable.Storable Sk_matrix44 where
  sizeOf _ = (#size sk_matrix44_t)
  alignment _ = (#alignment sk_matrix44_t)
  peek p' = do
    m00 <- (#peek sk_matrix44_t, m00) p'
    m01 <- (#peek sk_matrix44_t, m01) p'
    m02 <- (#peek sk_matrix44_t, m02) p'
    m03 <- (#peek sk_matrix44_t, m03) p'
    m10 <- (#peek sk_matrix44_t, m10) p'
    m11 <- (#peek sk_matrix44_t, m11) p'
    m12 <- (#peek sk_matrix44_t, m12) p'
    m13 <- (#peek sk_matrix44_t, m13) p'
    m20 <- (#peek sk_matrix44_t, m20) p'
    m21 <- (#peek sk_matrix44_t, m21) p'
    m22 <- (#peek sk_matrix44_t, m22) p'
    m23 <- (#peek sk_matrix44_t, m23) p'
    m30 <- (#peek sk_matrix44_t, m30) p'
    m31 <- (#peek sk_matrix44_t, m31) p'
    m32 <- (#peek sk_matrix44_t, m32) p'
    m33 <- (#peek sk_matrix44_t, m33) p'
    pure Sk_matrix44{..}
  poke p' Sk_matrix44{..} = do
    (#poke sk_matrix44_t, m00) p' m00
    (#poke sk_matrix44_t, m01) p' m01
    (#poke sk_matrix44_t, m02) p' m02
    (#poke sk_matrix44_t, m03) p' m03
    (#poke sk_matrix44_t, m10) p' m10
    (#poke sk_matrix44_t, m11) p' m11
    (#poke sk_matrix44_t, m12) p' m12
    (#poke sk_matrix44_t, m13) p' m13
    (#poke sk_matrix44_t, m20) p' m20
    (#poke sk_matrix44_t, m21) p' m21
    (#poke sk_matrix44_t, m22) p' m22
    (#poke sk_matrix44_t, m23) p' m23
    (#poke sk_matrix44_t, m30) p' m30
    (#poke sk_matrix44_t, m31) p' m31
    (#poke sk_matrix44_t, m32) p' m32
    (#poke sk_matrix44_t, m33) p' m33

{- | Opaque C struct: @"sk_canvas_t"@
-}
data Sk_canvas = Sk_canvas

{- | Opaque C struct: @"sk_nodraw_canvas_t"@
-}
data Sk_nodraw_canvas = Sk_nodraw_canvas

{- | Opaque C struct: @"sk_nway_canvas_t"@
-}
data Sk_nway_canvas = Sk_nway_canvas

{- | Opaque C struct: @"sk_overdraw_canvas_t"@
-}
data Sk_overdraw_canvas = Sk_overdraw_canvas

{- | Opaque C struct: @"sk_data_t"@
-}
data Sk_data = Sk_data

{- | Opaque C struct: @"sk_drawable_t"@
-}
data Sk_drawable = Sk_drawable

{- | Opaque C struct: @"sk_image_t"@
-}
data Sk_image = Sk_image

{- | Opaque C struct: @"sk_maskfilter_t"@
-}
data Sk_maskfilter = Sk_maskfilter

{- | Opaque C struct: @"sk_paint_t"@
-}
data Sk_paint = Sk_paint

{- | Opaque C struct: @"sk_font_t"@
-}
data Sk_font = Sk_font

{- | Opaque C struct: @"sk_path_t"@
-}
data Sk_path = Sk_path

{- | Opaque C struct: @"sk_picture_t"@
-}
data Sk_picture = Sk_picture

{- | Opaque C struct: @"sk_picture_recorder_t"@
-}
data Sk_picture_recorder = Sk_picture_recorder

{- | Opaque C struct: @"sk_bbh_factory_t"@
-}
data Sk_bbh_factory = Sk_bbh_factory

{- | Opaque C struct: @"sk_rtree_factory_t"@
-}
data Sk_rtree_factory = Sk_rtree_factory
